@@ -1,4 +1,4 @@
-% $Id: psout.w 1049 2009-05-25 08:25:20Z taco $
+% $Id: psout.w 1066 2009-06-01 07:41:07Z taco $
 %
 % Copyright 2008-2009 Taco Hoekwater.
 %
@@ -2022,6 +2022,7 @@ static boolean str_suffix (const char *begin_buf, const char *end_buf,
         size_t last_ptr_index;
         last_ptr_index = (size_t)(mp->ps->T##_ptr - mp->ps->T##_array);
         mp->ps->T##_limit *= 2;
+        mp->ps->T##_limit += s;
         if ((size_t)(mp->ps->T##_ptr - mp->ps->T##_array + (n)) > mp->ps->T##_limit)
             mp->ps->T##_limit = (size_t)(mp->ps->T##_ptr - mp->ps->T##_array + (n));
         mp->ps->T##_array = mp_xrealloc(mp,mp->ps->T##_array,mp->ps->T##_limit, sizeof(T##_entry));
